<resources>
    <string name="app_name">NDN-IoT</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">NDN-IoT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NDN-IoT</string>
    <string name="nav_header_subtitle">cb361991@gmail.con</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Show signed on device</string>
    <string name="enableBT">Enable Bluetooth</string>
    <string name="enableLocation">Enable Location Services</string>
    <string name="enableStorage">Enable Storage</string>
    <string name="manualScanBLE">Manual Scan</string>
    <string name="autoScanBLE">Auto Scan</string>
    <string name="connect">Connect</string>
    <string name="moreDeviceInfo">Get More Device Info</string>
    <string name="baseName">/icear/beacon</string>
    <string name="unknown_service">Unknown Service</string>
    <string name="unknown_characteristic">Unknown Characteristic</string>
    <string name="stopManualScan">Stop Manual Scan</string>
    <string name="stopAutoScan">Stop Auto Scan</string>
    <string name="clear">Clear</string>
    <string name="write">W</string>
    <string name="read">R</string>
    <string name="notify">N</string>
    <string name="indicate">I</string>
    <string name="discoverServices">Get Services</string>
    <string name="nameForStatus">/icear/beacon/status</string>
</resources>
